# glados-tts

./: launch.bat  pyproject.toml
