[project]
name = "glados-tts"
version = "0.1.0"
description = "She likes to test."
authors = [
    {name = "DJ Stomp",email = "85457381+DJStompZone@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "phonemizer (>=3.3.0,<4.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "unidecode (>=1.3.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
